add 1440 about pixel perfect styles

--- a/src/styles/download-page.scss
+++ b/src/styles/download-page.scss
@@ -144,6 +144,9 @@ margin-right: 170px;
 @media screen and (min-width: 1440px) {
     .download-page {
         position: relative;
+        .socials--side {
+            top: calc(44% - 3px);
+        }
         .section__wrapper{
             display: flex;
             flex-direction: row;
@@ -187,9 +190,7 @@ margin-bottom: 17px;
             letter-spacing: 0.5px;
             width: unset;
         }
-        .socials {
-            top: calc(44% - 3px);
-        }
+       
 
 
     }
