--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -29,6 +29,9 @@ font-weight: 400;
 &--tablet {
     display: none;
 }
+&--desktop {
+    display: none;
+}
 }
 .gallery__phone {
     font-family: "Source Serif Roman - Semibold";
@@ -133,10 +136,31 @@ font-weight: 400;
         background-image: url(/img/1440_about_bg-1.jpg);
         background-repeat: no-repeat;
         background-position: left 102px;
-        margin-bottom: 240px;
+        padding-top: 210px;
+        padding-bottom: 0px;
+        .btn {
+            margin-left: 0;
+            letter-spacing: 1.8px;
+            margin-top: 14px;
+            padding-bottom: 9px;
+        }
+        .paginations {
+            align-items: flex-end;
+            top: calc(45%);
+            left: 4.3%;
+        }
+        .section__title {
+            margin-left: 17px;
+            letter-spacing: 5px;
+            margin-bottom: 93px;
+        }
+        .socials--side {
+            top: calc(69% + 8px);
+        }
     }
+   
     .about__wrapper {
-        margin-top: 102px;
+        margin-top: 0;
         height: 560px;
         display: flex;
         flex-direction: row;
@@ -152,16 +176,24 @@ font-weight: 400;
         width: 320px;
         justify-content: space-between;
         height: 350px;
-        margin-top: auto;
+        margin-top: 132px;
         margin-left: auto;
         margin-right: 75px;
     }
     .gallery__desc {
-color: #1d1c1c;
-font-family: "Source Serif Roman";
-font-size: 18px;
-font-weight: 400;
-margin-bottom: 30px;
+        color: #1d1c1c;
+        font-family: "Source Serif Roman";
+        font-size: 18px;
+        line-height: 22px;
+        font-weight: 400;
+        margin-bottom: 27px;
+        &:first-child {
+            margin-bottom: 28px;
+        }
+        &--desktop {
+            display: block;
+            margin-bottom: 33px;
+        }
         &--email {
             margin-bottom: 0;
         }
@@ -179,7 +211,5 @@ margin-bottom: 30px;
             margin-bottom: 0;
         }
     }
-    .btn {
-        margin-left: 0;
-    }
+   
 }
