--- a/src/styles/contacts.css
+++ b/src/styles/contacts.css
@@ -1,118 +1,1 @@
-.contacts {
-  min-width: 320px;
-  box-sizing: border-box;
-  padding: 0 15px;
-  padding-top: 71px; }
-  .contacts .section__title {
-    margin-bottom: 35px; }
-
-.contacts__footer {
-  padding-bottom: 85px; }
-  .contacts__footer .contacts__links {
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    margin-bottom: 36px;
-    list-style: none;
-    text-align: center; }
-  .contacts__footer .contacts__link {
-    margin: 0 auto;
-    margin-bottom: 17px;
-    color: #4e4d4e;
-    font-family: "Source Serif Roman - Semibold";
-    font-size: 14px;
-    font-weight: 400;
-    letter-spacing: 1.36px; }
-    .contacts__footer .contacts__link .link {
-      width: 20px;
-      height: 18px;
-      color: #8eb574;
-      font-family: "Source Serif Roman - Semibold";
-      font-size: 18px;
-      font-weight: 400;
-      letter-spacing: 1.8px;
-      margin: 0 5px; }
-  .contacts__footer .socials {
-    padding: 0;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    margin: 0 auto;
-    width: 183px;
-    height: 26px;
-    list-style: none;
-    justify-content: center; }
-    .contacts__footer .socials .social {
-      display: inline-block;
-      margin-right: 26px;
-      padding: 0; }
-      .contacts__footer .socials .social:last-child {
-        margin-right: 0; }
-      .contacts__footer .socials .social__link {
-        width: 26px;
-        height: 26px;
-        display: inline-block; }
-        .contacts__footer .socials .social__link--fb {
-          background: url("/img/320_icon_facebook.png") no-repeat; }
-        .contacts__footer .socials .social__link--vk {
-          background: url("/img/320_icon_vk.png") no-repeat; }
-        .contacts__footer .socials .social__link--inst {
-          background: url("/img/320_icon_instagram.png") no-repeat; }
-        .contacts__footer .socials .social__link--pin {
-          background: url("/img/320_icon_pinterest.png") no-repeat; }
-
-@media screen and (min-width: 764px) {
-  .contacts {
-    background-image: url(/img/764_contacts_leaf-l.png);
-    background-repeat: no-repeat;
-    background-position: 35px 120px; }
-    .contacts .section__title {
-      margin-bottom: 78px; }
-      .contacts .section__title:after {
-        content: "CONTACTS"; }
-  .contacts__footer .contacts__links {
-    margin-bottom: 53px; }
-  .contacts__footer .contacts__link {
-    font-size: 16px;
-    margin-bottom: 25px; }
-    .contacts__footer .contacts__link .link {
-      margin-right: 15px;
-      margin-left: 25px; }
-  .contacts__footer .socials {
-    width: 216px;
-    height: 34px; }
-    .contacts__footer .socials .social {
-      margin-right: 20px; }
-      .contacts__footer .socials .social__link {
-        width: 34px;
-        height: 34px;
-        opacity: 1; }
-        .contacts__footer .socials .social__link--fb {
-          background: url("/img/764_icon_facebook.png") no-repeat; }
-        .contacts__footer .socials .social__link--vk {
-          background: url("/img/764_icon_vk.png") no-repeat; }
-        .contacts__footer .socials .social__link--inst {
-          background: url("/img/764_icon_instagram.png") no-repeat; }
-        .contacts__footer .socials .social__link--pin {
-          background: url("/img/764_icon_pinterest.png") no-repeat; } }
-
-@media screen and (min-width: 1440px) {
-  .contacts {
-    padding: 0 166px;
-    position: relative;
-    padding-top: 248px;
-    padding-bottom: 192px; }
-    .contacts .section__title {
-      margin-top: 0;
-      letter-spacing: 5px;
-      margin-bottom: 103px; }
-  .contacts__footer {
-    padding: 0; }
-    .contacts__footer .contacts .contacts__link {
-      font-size: 18px; }
-      .contacts__footer .contacts .contacts__link .link {
-        margin: 0 9px; }
-    .contacts__footer .contacts__links {
-      display: flex;
-      flex-direction: row;
-      margin-bottom: 45px; } }
+.contacts{min-width:320px;box-sizing:border-box;padding:71px 15px 0}.contacts .section__title{margin-bottom:35px}.contacts__footer{padding-bottom:85px}.contacts__footer .contacts__links{width:100%;padding:0;margin:0 0 36px;list-style:none;text-align:center}.contacts__footer .contacts__link{margin:0 auto 17px;color:#4e4d4e;font-family:"Source Serif Roman - Semibold";font-size:14px;font-weight:400;letter-spacing:1.36px}.contacts__footer .contacts__link .link{width:20px;height:18px;color:#8eb574;font-family:"Source Serif Roman - Semibold";font-size:18px;font-weight:400;letter-spacing:1.8px;margin:0 5px}.contacts__footer .socials{padding:0;display:flex;flex-direction:row;flex-wrap:wrap;margin:0 auto;width:183px;height:26px;list-style:none;justify-content:center}.contacts__footer .socials .social{display:inline-block;margin-right:26px;padding:0}.contacts__footer .socials .social:last-child{margin-right:0}.contacts__footer .socials .social__link{width:26px;height:26px;display:inline-block}.contacts__footer .socials .social__link--fb{background:url(/img/320_icon_facebook.png) no-repeat}.contacts__footer .socials .social__link--vk{background:url(/img/320_icon_vk.png) no-repeat}.contacts__footer .socials .social__link--inst{background:url(/img/320_icon_instagram.png) no-repeat}.contacts__footer .socials .social__link--pin{background:url(/img/320_icon_pinterest.png) no-repeat}@media screen and (min-width:764px){.contacts{background-image:url(/img/764_contacts_leaf-l.png);background-repeat:no-repeat;background-position:35px 120px}.contacts .section__title{margin-bottom:78px}.contacts .section__title:after{content:"CONTACTS"}.contacts__footer .contacts__links{margin-bottom:53px}.contacts__footer .contacts__link{font-size:16px;margin-bottom:25px}.contacts__footer .contacts__link .link{margin-right:15px;margin-left:25px}.contacts__footer .socials{width:216px;height:34px}.contacts__footer .socials .social{margin-right:20px}.contacts__footer .socials .social__link{width:34px;height:34px;opacity:1}.contacts__footer .socials .social__link--fb{background:url(/img/764_icon_facebook.png) no-repeat}.contacts__footer .socials .social__link--vk{background:url(/img/764_icon_vk.png) no-repeat}.contacts__footer .socials .social__link--inst{background:url(/img/764_icon_instagram.png) no-repeat}.contacts__footer .socials .social__link--pin{background:url(/img/764_icon_pinterest.png) no-repeat}}@media screen and (min-width:1440px){.contacts{position:relative;padding:248px 166px 192px}.contacts .section__title{margin-top:0;letter-spacing:5px;margin-bottom:103px}.contacts__footer{padding:0}.contacts__footer .contacts__links{display:flex;flex-direction:row;margin-bottom:45px}}
