--- a/src/styles/main-page.scss
+++ b/src/styles/main-page.scss
@@ -10,78 +10,74 @@
     background-color: rgba(#000000, 0.4);
 }
 
-.main-nav {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    height: 33px;
-    box-sizing: border-box;
-    align-items: center;
-}
-
-.pic__main {
-    display: none;
-}
-
-.main-nav__items {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: none;
-}
-
-.main-nav__item {
-    display: inline-block;
-}
-
-.logo-link {
-    height: 33px;
-    width: 112px;
-    box-sizing: border-box;
-}
-
 .main-header {
     display: flex;
     flex-direction: row;
-}
 
-.hamburger {
-    border: none;
-    position: relative;
-    margin-left: auto;
-    padding: 0;
-    margin-right: 15px;
-    height: 14px;
-    width: 25px;
-    background-color: transparent;
+    .logo-link {
+        height: 33px;
+        width: 112px;
+        box-sizing: border-box;
+    }
 
-    &__line {
-        position: absolute;
-        content: "";
-        display: inline-block;
-        width: 25px;
-        height: 2px;
-        background-color: #fff;
-        right: 0;
+    .main-nav {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        height: 33px;
+        box-sizing: border-box;
+        align-items: center;
 
-        &--top {
-            top: 0;
+        &__items {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            display: none;
+
+            .main-nav__item {
+                display: inline-block;
+            }
         }
 
-        &--middle {
-            top: 6px;
-            width: 14px;
-        }
+        .hamburger {
+            border: none;
+            position: relative;
+            margin-left: auto;
+            padding: 0;
+            margin-right: 15px;
+            height: 14px;
+            width: 25px;
+            background-color: transparent;
 
-        &--bottom {
-            bottom: 0px;
-            width: 14px;
+            &__line {
+                position: absolute;
+                content: "";
+                display: inline-block;
+                width: 25px;
+                height: 2px;
+                background-color: #fff;
+                right: 0;
+
+                &--top {
+                    top: 0;
+                }
+
+                &--middle {
+                    top: 6px;
+                    width: 14px;
+                }
+
+                &--bottom {
+                    bottom: 0px;
+                    width: 14px;
+                }
+            }
         }
     }
-}
 
-.nav__phone--mobile {
-    display: none;
+    .nav__phone--mobile {
+        display: none;
+    }
 }
 
 .paginations {
@@ -90,6 +86,10 @@
 
 .hero {
     padding-top: 154px;
+
+    .pic__main {
+        display: none;
+    }
 
     &__name {
         color: #fffeff;
@@ -142,91 +142,32 @@
 
     .main-nav {
         height: 60px;
-    }
 
-    .nav__phone {
-        display: flex;
-        align-self: center;
-        margin-right: 102px;
-        width: 300px;
-        text-decoration: none;
+        .nav__phone {
+            display: flex;
+            align-self: center;
+            margin-right: 102px;
+            width: 300px;
+            text-decoration: none;
+            color: #3b3b3b;
+            font-family: "Source Serif Roman - Semibold";
+            font-size: 18px;
+            font-weight: 400;
+        }
 
-        color: #3b3b3b;
-        font-family: "Source Serif Roman - Semibold";
-        font-size: 18px;
-        font-weight: 400;
-    }
+        .hamburger {
+            margin-right: 166px;
 
-    .hamburger {
-        margin-right: 166px;
-
-        &__line {
-            background-color: #000;
-            left: 0;
+            &__line {
+                background-color: #000;
+                left: 0;
+            }
         }
     }
 
     .hero {
         width: 661px;
         padding-left: 62px;
-
-        &__name {
-            color: #212021;
-            font-size: 36px;
-            margin: 0;
-            margin-left: 10px;
-            letter-spacing: 2.3px;
-            margin-top: 180px;
-            margin-bottom: 33px;
-            z-index: 1;
-            position: relative;
-            &:before {
-                z-index: -1;
-                position: absolute;
-                display: inline-block;
-                content: "Food";
-                color: #fffeff;
-                font-family: "Source Serif Roman - Semibold";
-                font-size: 48px;
-                font-weight: 400;
-                top: -17px;
-                left: -42px;
-                letter-spacing: 0.5px;
-            }
-            &:after {
-                z-index: -1;
-                position: absolute;
-                display: inline-block;
-                content: "Photogrphy";
-                color: #fffeff;
-                font-family: "Source Serif Roman - Semibold";
-                font-size: 48px;
-                font-weight: 400;
-                top: 12px;
-                left: 62px;
-                letter-spacing: 0.1px;
-
-            }
-        }
-
-        &__desc {
-            margin-left: 11px;
-            line-height: 19px;
-            width: 250px;
-            color: #212021;
-            font-size: 16px;
-            font-weight: 300;
-            margin-bottom: 38px;
-        }
-    }
-
-    .btn {
-        color: #212021;
-        margin-left: 9px;
-        border-bottom: 1px solid #212021;
-    }
-
-    .hero {
         padding-top: 102px;
         padding-left: 0;
         margin: 0 auto;
@@ -236,29 +177,88 @@
             clear: both;
             display: table;
         }
-    }
+        .pic__main {
+            display: block;
+            float: right;
+        }
 
-    .hero__wrapper {
+
+    &__wrapper {
         width: 300px;
         margin-right: 30px;
         float: left;
     }
 
-    .pic__main {
-        display: block;
-        float: right;
+    &__name {
+        color: #212021;
+        font-size: 36px;
+        margin: 0;
+        margin-left: 10px;
+        letter-spacing: 2.3px;
+        margin-top: 180px;
+        margin-bottom: 33px;
+        z-index: 1;
+        position: relative;
+
+        &:before {
+            z-index: -1;
+            position: absolute;
+            display: inline-block;
+            content: "Food";
+            color: #fffeff;
+            font-family: "Source Serif Roman - Semibold";
+            font-size: 48px;
+            font-weight: 400;
+            top: -17px;
+            left: -42px;
+            letter-spacing: 0.5px;
+        }
+
+        &:after {
+            z-index: -1;
+            position: absolute;
+            display: inline-block;
+            content: "Photogrphy";
+            color: #fffeff;
+            font-family: "Source Serif Roman - Semibold";
+            font-size: 48px;
+            font-weight: 400;
+            top: 12px;
+            left: 62px;
+            letter-spacing: 0.1px;
+
+        }
     }
 
-    .socials {
-        padding: 0;
-        margin: 0;
-        margin-top: 68px;
-        margin-left: 61px;
-        display: flex;
-        list-style: none;
-        flex-direction: row;
-        &--tablet {
-            .social:not(:last-child):after {
+    &__desc {
+        margin-left: 11px;
+        line-height: 19px;
+        width: 250px;
+        color: #212021;
+        font-size: 16px;
+        font-weight: 300;
+        margin-bottom: 38px;
+    }
+
+}
+
+.btn {
+    color: #212021;
+    margin-left: 9px;
+    border-bottom: 1px solid #212021;
+}
+
+.socials {
+    padding: 0;
+    margin: 0;
+    margin-top: 68px;
+    margin-left: 61px;
+    display: flex;
+    list-style: none;
+    flex-direction: row;
+
+    &--tablet {
+        .social:not(:last-child):after {
             position: absolute;
             opacity: 0.4;
             content: "";
@@ -270,52 +270,56 @@
             right: -15px;
         }
     }
-        .social {
-            margin-right: 20px;
-            position: relative;
-            &--side:not(:last-child):after {
-                position: absolute;
-                opacity: 0.4;
-                content: "—";
-                top: 0;
-                right: -16px;
-            }
-           
-            &__link {
-                text-decoration: none;
-                opacity: 0.4;
-                color: #212021;
-                font-family: "Source Serif Roman";
-                font-size: 12px;
-                font-weight: 300;
-                text-transform: uppercase;
-                letter-spacing: 0.8px;
-            }
+
+    .social {
+        margin-right: 20px;
+        position: relative;
+
+        &--side:not(:last-child):after {
+            position: absolute;
+            opacity: 0.4;
+            content: "—";
+            top: 0;
+            right: -16px;
+        }
+
+        &__link {
+            text-decoration: none;
+            opacity: 0.4;
+            color: #212021;
+            font-family: "Source Serif Roman";
+            font-size: 12px;
+            font-weight: 300;
+            text-transform: uppercase;
+            letter-spacing: 0.8px;
         }
     }
 }
 
+}
 @media screen and (min-width: 1440px) {
     .main-page {
-        height: 782px;
+        height: 780px;
         box-sizing: border-box;
         background-image:
-        url(/img/1440_main_bg-2.png),
-        url(/img/1440_main_bg-1.jpg);
+            url(/img/1440_main_bg-2.png),
+            url(/img/1440_main_bg-1.jpg);
         background-repeat: no-repeat, no-repeat;
         background-position: top 100px right 60px, top right;
         background-color: #f8f8f8;
         position: relative;
-       .paginations {
-        left: 20px;
-        top: calc(31%);
-        .pagination {
-            align-items: center;
 
+
+        .paginations {
+            left: 20px;
+            top: calc(31%);
+
+            .pagination {
+                align-items: center;
+            }
         }
-       }
-    
     }
+
     .paginations {
         display: flex;
         width: 37px;
@@ -323,21 +327,22 @@
         list-style: none;
         padding: 0;
         position: absolute;
-   
+
         .pagination {
             display: inline-block;
             width: 11px;
             height: 30px;
             border-bottom: 1px solid #171a1f;
             margin-bottom: 9px;
+
             &--active {
                 display: flex;
                 justify-content: center;
                 align-items: center;
                 height: 43px;
                 margin-bottom: 8px;
-             width: 37px;
-              border-bottom: 2px solid #000000;
+                width: 37px;
+                border-bottom: 2px solid #000000;
             }
 
             &__link {
@@ -348,89 +353,107 @@
                 font-size: 14px;
                 font-weight: 300;
                 font-style: italic;
+
                 &--active {
                     display: unset;
                 }
             }
         }
     }
-    .logo-link {
-        width: 254px;
-        height: 76px;
-        box-sizing: border-box;
-    }
-    .nav__phone{
-margin-right: auto;
-margin-top: 14px;
-margin-left: 110px;
-    }
+
+
     .main-header {
         height: 76px;
         box-sizing: border-box;
-    }
-    .main-nav {
-        height: 76px;
-        width: auto;
-        box-sizing: border-box;
-        &__items {
-            display: flex;
-            flex-direction: row;
-            list-style: none;
-            margin: 0;
-            padding: 0;
-            padding-left: 35px;
+
+        .logo-link {
+            width: 254px;
+            height: 76px;
+            box-sizing: border-box;
         }
-        &__item {
-            margin: 36px 46px 20px;
-            text-decoration: none;
-            letter-spacing: 0.6px;
-            opacity: 0.6;
-            color: #212021;
-            font-family: "Source Serif Roman";
-            font-size: 18px;
-            font-weight: 400;
-                }
+
+        .main-nav {
+            height: 76px;
+            width: auto;
+            box-sizing: border-box;
+
+            .nav__phone {
+                margin-right: auto;
+                margin-top: 14px;
+                margin-left: 110px;
+            }
+
+
+            &__items {
+                display: flex;
+                flex-direction: row;
+                list-style: none;
+                margin: 0;
+                padding: 0;
+                padding-left: 35px;
+            }
+
+            &__item {
+                margin: 36px 46px 20px;
+                text-decoration: none;
+                letter-spacing: 0.6px;
+                opacity: 0.6;
+                color: #212021;
+                font-family: "Source Serif Roman";
+                font-size: 18px;
+                font-weight: 400;
+            }
+
+            .hamburger {
+                display: none;
+            }
+        }
     }
-    .hamburger {
-        display: none;
-    }
+
+
     .hero {
         padding-top: 83px;
         height: 533px;
         box-sizing: border-box;
         margin-left: 156px;
         width: 853px;
+
         &__name {
             font-size: 48px;
             margin-top: 147px;
             margin-left: 0px;
             margin-bottom: 27px;
-            &:before{
-font-size: 83px;
-top:-36px;
-left:-34px;
+
+            &:before {
+                font-size: 83px;
+                top: -36px;
+                left: -34px;
             }
+
             &:after {
                 font-size: 52px;
-                top:20px;
-                left:189px;
+                top: 20px;
+                left: 189px;
                 letter-spacing: -0.2px;
-                        }
+            }
         }
+
         &__desc {
             margin-left: 0px;
             font-size: 18px;
             width: 285px;
         }
+
         &__wrapper {
             width: 380px;
         }
 
     }
-    
+
     .socials--tablet {
         margin-top: 118px;
         margin-left: 154px;
+
         .social {
             &__link {
                 font-size: 14px;
