--- a/src/styles/prices.scss
+++ b/src/styles/prices.scss
@@ -5,6 +5,8 @@
     padding-top: 138px;
     .section__title {
         margin-bottom: 50px;
+        margin-left: 25px;
+        letter-spacing: 3px;
     }
 }
 .prices__photos {
@@ -22,9 +24,9 @@ align-items: center;
     margin: 0;
     margin-top: 13px;
     margin-bottom: 10px;
-font-family: "Source Serif Roman";
-font-size: 18px;
-font-weight: 700;
+    font-family: 'Source Serif Pro', serif;
+    font-size: 18px;
+font-weight: 400;
 line-height: 19px;
 display: flex;
 justify-content: center;
@@ -69,7 +71,7 @@ background-color:  #8eb574;
 .photo__feature {
     margin-bottom: 1px;
 color: #212021;
-font-family: "Source Serif Roman";
+font-family: 'Source Serif Pro', serif;
 font-size: 14px;
 font-weight: 400;
 }
@@ -106,8 +108,6 @@ font-weight: 400;
         &:last-child {
             margin-top: 118px;
         }
-    }
-    .photo__features {
     }
     .photo__price {
         margin-top: 10px;
